src/examples/errors/trap.bash
#!/bin/bash -ue

# This is an example of how to handle bash error using 'trap' builtin.
#
# References:
# - https://stackoverflow.com/questions/64786/error-handling-in-bash
 
# TBD
